# civitasos-sdk

./: generate.sh
python/: README.md  civitasos_async_sdk.py  civitasos_cli.py  civitasos_client.py  civitasos_sdk.py  example.py  pyproject.toml  setup.py  two_agent_demo.py
python/adapters/: __init__.py  crewai_adapter.py  langchain_adapter.py
python/civitasos/: __init__.py  _a2a.py  _advanced.py  _agent.py  _cluster.py  _core.py  _governance.py  _pool.py  _r2r.py  models.py
python/examples/: agent_template.py
python/tests/: test_auth_challenge.py
typescript/: civitasos-client.ts  package-lock.json  package.json  tsconfig.json
typescript/types/: index.d.ts  package.json
