[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civitasos-sdk"
version = "1.0.0rc1"
description = "Python SDK for CivitasOS — the self-evolving AI society"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "ThneAI", email = "thneonl@outlook.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

dependencies = ["PyNaCl>=1.5.0"]

[project.optional-dependencies]
async = ["aiohttp>=3.9.0"]

[project.scripts]
civitasos = "civitasos_cli:main"

[tool.setuptools]
packages = ["civitasos"]

[project.urls]
Homepage = "https://github.com/ThneAI/civitasos-sdk"
Repository = "https://github.com/ThneAI/civitasos-sdk"
